--- a/private_dot_config/ssh/config
+++ b/private_dot_config/ssh/config
@@ -1,1 +1,1 @@
-Host *    ServerAliveInterval 300    ServerAliveCountMax 2
+Host *    ServerAliveInterval 300    ServerAliveCountMax 2    IdentityFile /home/cesar/.config/ssh/id_dsa
