--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -2,25 +2,25 @@
 /.gitattributes
 /.gitignore
 /.gitmodules
+.idea/
+
+/bootstrap.ps1
+/WSL2-restart.ps1
+/windows/
+/wsl/
+/assets/
 
 /bootstrap.sh
-/bootstrap.ps1
+/install/
 /private_dot_config/chezmoi/chezmoi.yaml
+
+/Dockerfile
+/build-docker-image.sh
+
+/README.md
+/LICENSE
+
 /libs/tpm/lib/
 /libs/tpm/tests/
-/windows/
 
-README.md
-LICENSE
-
-Dockerfile
-/build-docker-image.sh
-/install/
-
-/assets/
-/configs/
 /dotfiles/
-.idea/
-/wsl/
-/WSL2-reset.ps1
-/WSL2-restart.ps1
