--- a/wsl/wsl.conf
+++ b/wsl/wsl.conf
@@ -2,7 +2,7 @@
 enabled = true
 root = /
 options = "metadata,uid=1000,gid=1000,umask=0022,fmask=11"
-mountFsTab = false
+mountFsTab = true
 
 [network]
 generateHosts = true
