--- a/private_dot_config/ssh/config
+++ b/private_dot_config/ssh/config
@@ -4,6 +4,6 @@ RemoteForward ~/.config/gpg/S.gpg-agent.ssh /tmp/S.weasel-pageant
 Host *
     ServerAliveInterval 300
     ServerAliveCountMax 2
-    IdentityFile /home/cesar/.config/ssh/id_dsa
+    IdentityFile ~/.config/ssh/tardis.pub
 
 
