--- a/private_dot_config/ssh/config
+++ b/private_dot_config/ssh/config
@@ -1,5 +1,5 @@
-ForwardAgent yes
-RemoteForward /c/Users/cesar/AppData/Roaming/gnupg/S.gpg-agent.ssh /tmp/S.weasel-pageant
+#ForwardAgent yes
+#RemoteForward /c/Users/cesar/AppData/Roaming/gnupg/S.gpg-agent.ssh /tmp/S.weasel-pageant
 
 Host *
     ServerAliveInterval 300
