--- a/private_dot_config/ssh/config
+++ b/private_dot_config/ssh/config
@@ -1,6 +1,6 @@
 ForwardAgent yes
-RemoteForward ~/.config/gpg/S.gpg-agent ~/.config/gpg/S.gpg-agent
-RemoteForward ~/.config/gpg/S.gpg-agent.ssh /tmp/S.weasel-pageant
+#RemoteForward ~/.config/gpg/S.gpg-agent ~/.config/gpg/S.gpg-agent
+#RemoteForward ~/.config/gpg/S.gpg-agent.ssh /tmp/S.weasel-pageant
 
 Host *
     ServerAliveInterval 300
